
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.36.6]]
== 0.36.6 (TBD)

icon:plus[] REST: The `webroot` endpoint will now set the `Cache-Control` header to `public` if the requested node can be read using the anonymous role. Otherwise the header will be set to `private`. This information is useful if you want to use a Caching Proxy in-between Gentics Mesh and your front-end application.

icon:check[] Core: Performance of loading nodes has been improved.

icon:check[] Core: Request logging now uses the link:https://vertx.io/docs/apidocs/io/vertx/ext/web/handler/LoggerFormat.html#SHORT[short format], which also shows how much time the the response took to complete.

icon:check[] Core: Improved performance when loading images with image manipulation.

[[v0.36.5]]
== 0.36.5 (10.07.2019)

icon:plus[] Upload: The `upload.parser` config setting and `MESH_BINARY_DOCUMENT_PARSER` environment variable can be used to control whether uploads should be parsed to extract metadata and contents. Uploads will be parsed by default.

icon:plus[] Search: The `search.includeBinaryFields` config setting and `MESH_ELASTICSEARCH_INCLUDE_BINARY_FIELDS` environment variable can be used to control whether binary field metadata and plain text content should be added to the search index. By default metadata and content will be added to the search index.

icon:plus[] REST: A core library for JSON support (jackson) has been updated.

icon:plus[] GraphQL: The performance when loading nodes via the schema field has been improved.

icon:plus[] Core: Various internal calls have been improved to increase read performance.

icon:check[] Search: Fixed root cause of unnecessary full sync which could occur during schema migrations.

[[v0.36.4]]
== 0.36.4 (05.07.2019)
