@@ -71,21 +71,19 @@ public class WebRootEndpointETagTest extends AbstractMeshTest {
 			tx.success();
 		}
 
-		try (Tx tx = tx()) {
-			// 2. Update the binary data
-			call(() -> uploadRandomData(node, "en", "binary", binaryLen, contentType, fileName));
+		// 2. Update the binary data
+		call(() -> uploadRandomData(node, "en", "binary", binaryLen, contentType, fileName));
 
-			// 3. Try to resolve the path
-			String path = "/News/2015/somefile.dat";
+		// 3. Try to resolve the path
+		String path = "/News/2015/somefile.dat";
 
-			String etag = callETag(() -> client().webroot(PROJECT_NAME, path, new VersioningParametersImpl().draft(), new NodeParametersImpl().setResolveLinks(LinkType.FULL)));
-			assertNotNull(etag);
+		String etag = callETag(() -> client().webroot(PROJECT_NAME, path, new VersioningParametersImpl().draft(),
+			new NodeParametersImpl().setResolveLinks(LinkType.FULL)));
+		assertNotNull(etag);
 
-			// Check whether 304 is returned for correct etag
-			assertEquals(etag, callETag(() -> client().webroot(PROJECT_NAME, path, new VersioningParametersImpl().draft(),
-				new NodeParametersImpl().setResolveLinks(LinkType.FULL)), etag, false, 304));
-
-		}
+		// Check whether 304 is returned for correct etag
+		assertEquals(etag, callETag(() -> client().webroot(PROJECT_NAME, path, new VersioningParametersImpl().draft(),
+			new NodeParametersImpl().setResolveLinks(LinkType.FULL)), etag, false, 304));
 
 	}
 
@@ -102,7 +100,8 @@ public class WebRootEndpointETagTest extends AbstractMeshTest {
 			tx.success();
 		}
 
-		String responseTag = callETag(() -> client().webroot(PROJECT_NAME, path, new VersioningParametersImpl().draft(), new NodeParametersImpl().setLanguages("en", "de")));
+		String responseTag = callETag(
+			() -> client().webroot(PROJECT_NAME, path, new VersioningParametersImpl().draft(), new NodeParametersImpl().setLanguages("en", "de")));
 
 		try (Tx tx = tx()) {
 			Node node = content("news_2015");
