@@ -1,0 +1,5 @@
+[options="header"]
+|======
+| Configuration        | Type | Default | Description
+| ```pathCacheSize```  | Flag | 20_000  | Set the maximum size of the path cache. A value of 0 will disable the cache.
+|======
